--- a/README
+++ b/README
@@ -2,5 +2,11 @@
 
 '1992-2022
 
+# bemieizorg
+https://nl.wikipedia.org/wiki/Bemoeizorg
+
+# isoleercel
+https://nl.wikipedia.org/wiki/Isoleercel
+
 # staat der nederland
 https://nl.wikipedia.org/wiki/Staat_der_Nederlanden
