--- a/README
+++ b/README
@@ -1,8 +1,7 @@
 # imagine-a-world-without-neurons
 
-'1992-2022
 
-# bemieizorg
+# bemoeizorg
 https://nl.wikipedia.org/wiki/Bemoeizorg
 
 # isoleercel
@@ -10,3 +9,5 @@ https://nl.wikipedia.org/wiki/Isoleercel
 
 # staat der nederland
 https://nl.wikipedia.org/wiki/Staat_der_Nederlanden
+
+nederland ® 1992-2022
