--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-# imagine-a-world-without-neurons
+-----------------------------------
+| imagine-a-world-without-neurons |
+-----------------------------------
 
 
 # bemoeizorg
