--- a/README
+++ b/README
@@ -3,8 +3,17 @@
 -----------------------------------
 
 
+# murchison meteorite
+https://en.wikipedia.org/wiki/Murchison_meteorite
+
 # bemoeizorg
 https://nl.wikipedia.org/wiki/Bemoeizorg
+
+# precentral gyrus
+https://en.wikipedia.org/wiki/Precentral_gyrus
+
+# mutilation
+https://en.wikipedia.org/wiki/Mutilation
 
 # isoleercel
 https://nl.wikipedia.org/wiki/Isoleercel
