--- a/README
+++ b/README
@@ -12,6 +12,9 @@ https://nl.wikipedia.org/wiki/Bemoeizorg
 # precentral gyrus
 https://en.wikipedia.org/wiki/Precentral_gyrus
 
+# l-type calcium channel
+https://en.wikipedia.org/wiki/L-type_calcium_channel
+
 # mutilation
 https://en.wikipedia.org/wiki/Mutilation
 
