--- a/README
+++ b/README
@@ -6,6 +6,9 @@
 # murchison meteorite
 https://en.wikipedia.org/wiki/Murchison_meteorite
 
+# crimes against humanity
+https://en.wikipedia.org/wiki/Crimes_against_humanity
+
 # bemoeizorg
 https://nl.wikipedia.org/wiki/Bemoeizorg
 
